adding_method_fakeLikeRepo_tests